# rag-study

./: .env.example  .gitignore  CLAUDE.md  README.md  chat_app.py  document_loader_ui.py  main.py  new_document_loader.py  new_document_loader_ui.py  pyproject.toml  streamlit_app.py
.claude/: settings.json
banchmark/: generate-testset.py
benchmark/: generate-testset.py  ground_truth_.jsonl  ground_truth_20250909_094947.jsonl  make_grent_json.sh  rag-test-data.py  ragas-test-result_20250909_091328.csv  ragas-test-result_20250909_101529.csv  ragas-test.py  testset_gpt-4.1-nano_text-embedding-3-small_20250908_152046.jsonl  testset_gpt-4.1-nano_text-embedding-3-small_20250909_044039.jsonl  testset_gpt-4.1-nano_text-embedding-3-small_20250909_082342.jsonl
benchmark/rag_eval_dataset_arrow/: data-00000-of-00001.arrow  dataset_info.json  state.json
db/faiss/: index.faiss  index.pkl  index_chunks.jsonl
module/: __init__.py  document_parser.py  simple_rag_chat.py  vector-db.py  vector_db.py
test/: faiss-test.py  langchain-test.py  pydantic-test.py
test/db/faiss_new/: embedding_info.json  index.faiss  index.pkl
